# rkl-discord-chat-bot

./: README.rst  pyproject.toml
bot/: .env.example  main.py
bot/util/: Globals.py  KongUtil.py  OpenSeaUtil.py  Util.py
